--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ ul{
     height: 0rem;
     min-height: 10vh;
     overflow: hidden;
+    transition: height 1s ease-in-out;
 }
 
 .nav .nav-menu{
@@ -106,6 +107,10 @@ ul{
 .nav .toggle-collapse .toggle-icons i{
     font-size: 1.4rem;
     color: var(--text-gray);
+}
+
+.collapse{
+    height: 30rem;
 }
 
 .nav .nav-items{
