--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,8 @@ html,body{
     --blue: #00b4d8;
     --pink: #ff0054;
     --black: #0b090a;
-    --lavendar: #6b4e71;
+    --lavendar: #e0aaff;
+    --fluorescent: #89fc00;
 
 
     /* gradient color */
@@ -90,15 +91,16 @@ button.btn{
     cursor: pointer;
 }
 
+
 /*-------)(--------- Global Classes ---------)(---------*/
 
 /*-------------------------- navbar ---------------------*/
 
 .nav{
-    background-color: chartreuse;
+    background-color: var(--white);
     padding: 0 2rem;
     height: 0rem;
-    min-height: 11vh;
+    min-height: 10vh;
     overflow: hidden;
     transition: height 1s ease-in-out;
 }
@@ -142,7 +144,7 @@ button.btn{
 }
 
 .nav .nav-items .nav-link:hover{
-    background-color: var(--pink);
+    background-color: #cdec04;
 }
 
 .nav .nav-items .nav-link:hover a{
@@ -166,7 +168,7 @@ button.btn{
 }
 
 .nav .social i:hover{
-    color: darkorange;
+    color: red;
 }
 
 
@@ -180,11 +182,25 @@ button.btn{
 /*-------------------- Site Title -----------------*/
 
 main .site-title{
-    background: url('../assets/bgimg.jpg');
+    background: url('../assets/bg2.jpg');
     background-size: cover;
-    height: 110vh;
-    display: flex;
+    display: block;
     justify-content: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;;
+    animation: colour_anim 100s linear infinite;
+    
+
+}
+
+@keyframes colour_anim{
+    0%{
+        background-position: 0% 0%;
+    }
+    100%{
+        background-position: -2122px 0;
+    }
 }
 
 main .site-title .site-background{
@@ -219,6 +235,12 @@ main .site-title .btn:hover{
 /*  Viewport less than or equal to 750px   */
 
 @media only screen and (max-width: 750px){
+    .nav{
+        background-color: #eeef20;
+    }
+    .nav .nav-items .nav-link:hover{
+        background-color: #ff8f2c;
+    }
     .nav .nav-menu, .nav .nav-items{
         flex-direction: column;
     }
@@ -226,6 +248,7 @@ main .site-title .btn:hover{
     .nav .toggle-collapse{
         display: initial;
     }
+
 }
 
 
