--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 html,body{
     margin: 0%;
     box-sizing: border-box;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 
@@ -90,6 +90,15 @@ button.btn{
     font-family: var(--Livvic);
     cursor: pointer;
 }
+
+span{
+    font-family: var(--Abel);
+}
+
+.container{
+    margin: 0.5vw;
+}
+
 
 
 /*-------)(--------- Global Classes ---------)(---------*/
@@ -182,16 +191,14 @@ button.btn{
 /*-------------------- Site Title -----------------*/
 
 main .site-title{
-    background: url('../assets/bg2.jpg');
+    background: url('../assets/bgimg.jpg');
     background-size: cover;
-    display: block;
-    justify-content: center;
     width: 100%;
-    height: 100%;
-    position: absolute;;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
     animation: colour_anim 100s linear infinite;
     
-
 }
 
 @keyframes colour_anim{
@@ -204,13 +211,13 @@ main .site-title{
 }
 
 main .site-title .site-background{
-    padding-top: 8rem;
+    padding-top: 10rem;
     text-align: center;
     color: var(--black);
 
 }
 
-main .site-title h1,h3{
+main .site-title h1, h3{
     margin: .3rem;
 }
 
@@ -225,8 +232,75 @@ main .site-title .btn:hover{
     border: 1px solid var(--white);
 }
 
-/*----------)(------- Site Title -------)(----------*/
+/*----------)(------- Site Title -------)(----------------*/
 
+
+/*----------------- Blog Carousel --------------------*/
+
+main .blog{
+    background: url('../assets/Abract01.png');
+    background-repeat: no-repeat;
+    background-position: right;
+    height: 100vh;
+    width: 100%;
+    background-size: 65%;
+}
+
+main .blog .blog-post{
+    padding-top: 6rem;;
+}
+
+
+main .blog-post .blog-content{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 80%;
+    margin: 3rem 2rem;
+    box-shadow: 0 15px 20px rgba(0,0,0,0.2);
+}
+
+
+main .blog-content .blog-title{
+    padding: 2rem 0;
+}
+
+main .blog-content .btn-blog{
+    padding: .7rem 2rem;
+    background: var(--sky);
+    margin: .5rem;
+}
+
+main .blog-content span{
+    display: block;
+}
+
+section .container .owl-nav{
+    position: absolute;
+    top: 0%;
+    margin: 0 auto;
+    width: 100%;
+}
+
+.owl-nav .owl-prev .owl-nav-prev,
+.owl-nav .owl-next .owl-nav-next{
+    color: var(--text-gray);
+    background: transparent;
+    font-size: 2rem;
+}
+
+.owl-theme .owl-nav [class*='owl-']:hover{
+    background: transparent;
+    color: var(--midnight);
+}
+
+.owl-theme .owl-nav [class*='owl-']{
+    outline: none;
+}
+
+
+
+/*------------)(----------- Blog Carousel ---------)(---------*/
 
 
 /*------------)(----------- Main Content ---------)(---------*/
