--- a/css/style.css
+++ b/css/style.css
@@ -15,19 +15,19 @@ html,body{
     --text-gray: #3f4954;
     --text-violet: #6930c3;
     --text-red: #d00000;
-    --text-light: #686666da;
+    --text-light: #4a5759;
     --bg-color: #0f0f0f;
     --white: #ffffff;
     --midnight: #104f55;
     --blue: #00b4d8;
     --pink: #ff0054;
     --black: #0b090a;
-    --lavendar: #e0aaff;
+    --lavendar: #b89ec7;
     --fluorescent: #89fc00;
 
 
     /* gradient color */
-    --sky: linear-gradient(to right, #92fe9d 0%, #00c9ff 100%);
+    --sky: linear-gradient(-225deg, #D4FFEC 0%, #57F2CC 48%, #4596FB 100%);
 
 
     /* theme font-family */
@@ -98,6 +98,16 @@ span{
 .container{
     margin: 0 5vw;
 }
+
+.text-gray{
+    color: var(--text-gray);
+}
+
+p{
+    font-family: var(--Lexend);
+    color: var(--text-light);
+}
+
 
 
 
@@ -257,7 +267,7 @@ main .blog-post .blog-content{
     text-align: center;
     width: 80%;
     margin: 3rem 2rem;
-    box-shadow: 0 15px 20px rgba(0,0,0,0.2);
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
 }
 
 
@@ -309,14 +319,77 @@ section .container .owl-nav{
 
 
 
-main .site-content{
-    margin-top: 15vh;
+main .site-content{   
+    margin-top: 20vh;
     display: grid;
     grid-template-columns: 70% 30%;
 }
 
 main .post-content{
     width: 100%;
+}
+
+main .site-content .post-content> .post-image, .post-title{
+    padding: 1rem 2rem;
+    position: relative;
+}
+
+main .site-content .post-content > .post-image .post-info{
+    background: var(--sky);
+    padding: 1rem;
+    position: absolute;
+    bottom: 0%;
+    left: 20vw;
+    border-radius: 3rem;
+}
+
+
+main .site-content .post-content > .post-image > div{
+    overflow: hidden;
+}
+
+main .site-content .post-content > .post-image .img{
+    width: 100%;
+    transition: all 1s ease;
+}
+
+main .site-content .post-content > .post-image .img:hover{
+    transform: scale(1.3);
+}
+
+main .site-content .post-content > .post-image .post-info span{
+    margin: 0.5rem;
+}
+
+main .post-content .post-title a{
+    font-family: var(--Bree);
+    font: bold;
+    font-size: 2rem;
+}
+
+
+.site-content .post-content .post-title .post-btn{
+    border-radius: 0;
+    padding: .7rem 1.5 rem;
+    background: var(--sky);
+}
+
+.site-content .pagination{
+    justify-content: center;
+    color: var(--text-gray);
+    margin: 4rem 0;
+}
+
+.site-content .pagination a{
+    padding: .6rem .9rem;
+    border-radius: 2rem;
+    margin: 0.3rem;
+    font-family: var(--Lexend);
+}
+
+.site-content .pagination .pages{
+    background: var(--text-gray);
+    color: var(--white);
 }
 
 /*-----------------)(---------------- Site Content ---------------)(-------------------*/
@@ -343,6 +416,7 @@ main .post-content{
     .nav .toggle-collapse{
         display: initial;
     }
+
 
 }
 
