--- a/css/style.css
+++ b/css/style.css
@@ -320,6 +320,7 @@ section .container .owl-nav{
 
 
 main .site-content{ 
+    padding-top: 5vh;
     display: grid;
     grid-template-columns: 70% 30%;
 }
@@ -599,7 +600,6 @@ footer.footer .move-up span:hover{
     footer.footer .container{
         grid-template-columns: repeat(2, 1fr);
     }
-
 
 }
 
